# UpTraderTestTusk

./: .gitignore  README.md  pyproject.toml  req.txt
config/: settings.py  urls.py
tree_menu/: admin.py  models.py  urls.py  views.py
tree_menu/migrations/: 0001_initial.py
tree_menu/templates/: base.html
tree_menu/templates/tree_menu/: menu.html
tree_menu/templatetags/: menu_tags.py
