[tool.poetry]
name = "uptradertesttusk"
version = "0.1.0"
description = ""
authors = ["Andreev <151520440+DeadGEEK990@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
asgiref = "3.7.2"
attrs = "24.2.0"
backports-cached-property = "1.0.2"
black = "23.3.0"
build = "0.10.0"
cachecontrol = "0.12.14"
certifi = "2025.6.15"
charset-normalizer = "3.4.2"
cleo = "2.1.0"
click = "8.1.8"
colorama = "0.4.6"
crashtest = "0.4.1"
distlib = "0.3.9"
django = "3.2.25"
dulwich = "0.21.7"
filelock = "3.12.2"
html5lib = "1.1"
idna = "3.10"
importlib-metadata = "6.7.0"
importlib-resources = "5.12.0"
installer = "0.7.0"
jaraco-classes = "3.2.3"
jsonschema = "4.17.3"
keyring = "23.13.1"
lockfile = "0.12.2"
more-itertools = "9.1.0"
msgpack = "1.0.5"
mypy-extensions = "1.0.0"
packaging = "24.0"
pathspec = "0.11.2"
pexpect = "4.9.0"
pkginfo = "1.10.0"
pkgutil-resolve-name = "1.3.10"
platformdirs = "3.11.0"
poetry = "1.5.1"
poetry-core = "1.6.1"
poetry-plugin-export = "1.4.0"
ptyprocess = "0.7.0"
pyproject-hooks = "1.2.0"
pyrsistent = "0.19.3"
pytz = "2025.2"
pywin32-ctypes = "0.2.3"
rapidfuzz = "3.4.0"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
shellingham = "1.5.4"
six = "1.17.0"
sqlparse = "0.4.4"
tomli = "2.0.1"
tomlkit = "0.12.5"
trove-classifiers = "2025.5.9.12"
typed-ast = "1.5.5"
typing-extensions = "4.7.1"
urllib3 = "1.26.20"
virtualenv = "20.26.6"
webencodings = "0.5.1"
zipp = "3.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
